--- a/src/Modules/BookingModule/Views/BookingOtherDataView.xaml
+++ b/src/Modules/BookingModule/Views/BookingOtherDataView.xaml
@@ -33,32 +33,32 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <GroupBox Header="Informacion Generales">
-            <ItemsControl x:Name="leftPart" HorizontalAlignment="Stretch" 
+          
+                <ItemsControl x:Name="leftPart" HorizontalAlignment="Stretch" 
                                       VerticalAlignment="Stretch" 
                                       ItemsSource="{Binding GeneralInfoCollection}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <VirtualizingStackPanel Orientation="Vertical"
-                                                            VirtualizingStackPanel.VirtualizationMode="Recycling" />
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Vertical" />
 
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <Syncfusion:ButtonAdv  Grid.Column="0"   
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Syncfusion:ButtonAdv  Grid.Column="0"   
                                                    Background="Transparent" 
                                                    Height="30" Width="30" ToolTip="Nuevo"
                                                    SmallIcon="/KarveControls;component/Images/create.png" 
                                                    Command="{Binding CreateNew}" 
                                                    CommandParameter="{Binding CreateTag}">
 
-                            </Syncfusion:ButtonAdv>
-                            <karveControls:DualFieldSearchBox Grid.Column="1"
+                                </Syncfusion:ButtonAdv>
+                                <karveControls:DualFieldSearchBox Grid.Column="1"
                                              LabelText ="{Binding LabelText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                              LabelTextWidth="120"
                                              DataFieldFirst="{Binding DataField}"
@@ -66,17 +66,17 @@
                                              AssistProperties="{Binding AssistProperties}"
                                              TextContentFirstWidth="100"
                                              TextContentSecondWidth="200"
-                                             MagnifierCommand="{Binding AssistCommand, Mode=Default}"
-                                             ItemChangedCommand="{Binding ItemChangedCommand, Mode=Default}"
+                                             MagnifierCommand="{Binding AssistCommand, Mode=OneWay}"
+                                             ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
                                              DataSource="{Binding DataSource, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, PresentationTraceSources.TraceLevel=High}"
                                              SourceView="{Binding SourceView, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, PresentationTraceSources.TraceLevel=High}">
 
-                            </karveControls:DualFieldSearchBox>
-                        </Grid>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </GroupBox>
+                                </karveControls:DualFieldSearchBox>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                    </GroupBox>
         <GroupBox Header="Rotulo" Grid.Row="1" Margin="0,5,0,0">
             <Grid>
                 <Grid.RowDefinitions>
@@ -90,7 +90,10 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="60*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <photoframe:PhotoFrame Height="250" Grid.Row="0"  Grid.ColumnSpan="2" Grid.RowSpan="2">
+                <photoframe:PhotoFrame Height="250" Grid.Row="0"  Grid.ColumnSpan="2" Grid.RowSpan="2"
+                                       ImageBinarySource="{Binding LabelImageSource, 
+                                                           Mode=TwoWay, 
+                                                           UpdateSourceTrigger=PropertyChanged}">
                 </photoframe:PhotoFrame>
 
                 <karveControls:DataField Grid.Row="3"
